# PathPlanningProject

./: .gitignore  .travis.yml  README.md
Examples/: example.xml  example_log.xml
Src/: ASearch.pro  CMakeLists.txt  astar.cpp  astar.h  auxiliary.h  dijkstra.cpp  dijkstra.h  environmentoptions.h  gl_const.h  ilogger.h  jps.cpp  jps.h  map.cpp  map.h  mission.cpp  mission.h  node.h  search.cpp  search.h  searchresult.h  xmllogger.cpp  xmllogger.h
TestData/: 10_test.xml  11_test.xml  12_test.xml  13_test.xml  14_test.xml  15_test.xml  16_test.xml  C_test.xml  D_test.xml  E_test.xml  F_test.xml  vis_astar_test.xml  vis_dijkstra_test.xml  vis_jps_test.xml
Tests/: CMakeLists.txt
visualisation/: custom_writer.py  vis_gen.py
