include_directories(../Src)

add_executable(testbench testbench.cpp)

target_link_libraries(testbench PPLIB)

add_test(NAME Test1 COMMAND testbench ../../../TestData/0_test.xml)
add_test(NAME Test2 COMMAND testbench ../../../TestData/1_test.xml)
add_test(NAME Test3 COMMAND testbench ../../../TestData/2_test.xml)
add_test(NAME Test4 COMMAND testbench ../../../TestData/3_test.xml)
add_test(NAME Test5 COMMAND testbench ../../../TestData/4_test.xml)
add_test(NAME Test6 COMMAND testbench ../../../TestData/5_test.xml)
add_test(NAME Test7 COMMAND testbench ../../../TestData/6_test.xml)
add_test(NAME Test8 COMMAND testbench ../../../TestData/7_test.xml)
add_test(NAME Test9 COMMAND testbench ../../../TestData/8_test.xml)
add_test(NAME Test10 COMMAND testbench ../../../TestData/9_test.xml)
add_test(NAME Test11 COMMAND testbench ../../../TestData/A_test.xml)
add_test(NAME Test12 COMMAND testbench ../../../TestData/B_test.xml)
add_test(NAME Test13 COMMAND testbench ../../../TestData/C_test.xml)
add_test(NAME Test14 COMMAND testbench ../../../TestData/D_test.xml)
add_test(NAME Test15 COMMAND testbench ../../../TestData/E_test.xml)
add_test(NAME Test16 COMMAND testbench ../../../TestData/F_test.xml)
add_test(NAME Test17 COMMAND testbench ../../../TestData/10_test.xml)
add_test(NAME Test18 COMMAND testbench ../../../TestData/11_test.xml)
add_test(NAME Test19 COMMAND testbench ../../../TestData/12_test.xml)
add_test(NAME Test20 COMMAND testbench ../../../TestData/13_test.xml)
add_test(NAME Test21 COMMAND testbench ../../../TestData/14_test.xml)
add_test(NAME Test22 COMMAND testbench ../../../TestData/15_test.xml)
add_test(NAME Test23 COMMAND testbench ../../../TestData/16_test.xml)


add_test(NAME VisTest15 COMMAND testbench ../../../TestData/vis_astar_test.xml)
add_test(NAME VisTest16 COMMAND testbench ../../../TestData/vis_dijkstra_test.xml)
add_test(NAME VisTest17 COMMAND testbench ../../../TestData/vis_jps_test.xml)
